--- a/Calculator.html
+++ b/Calculator.html
@@ -7,7 +7,7 @@
             integrity= "sha512-iphNRh6dPbeuPGIrQbCdbBF/qcqadKWLa35YPVfMZMHBSI6PLJh1om2xCTWhpVpmUyb4IvVS9iYnnYMkleVXLA=="
             crossorigin="anonymous" 
             referrerpolicy="no-referrer"></script> 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Calcolator</title>
 </head>
 <body>
